@@ -1,4 +1,4 @@
-Copyright (c) 2006-2007, Apple Computer, Inc. All rights reserved.
+Copyright (c) 2006-2007, Apple Inc. All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
 modification, are permitted provided that the following conditions
@@ -8,7 +8,7 @@ are met:
 2.  Redistributions in binary form must reproduce the above copyright
     notice, this list of conditions and the following disclaimer in the
     documentation and/or other materials provided with the distribution. 
-3.  Neither the name of Apple Computer, Inc. ("Apple") nor the names of
+3.  Neither the name of Apple Inc. ("Apple") nor the names of
     its contributors may be used to endorse or promote products derived
     from this software without specific prior written permission. 
 
